--- a/math-calculator/pom.xml
+++ b/math-calculator/pom.xml
@@ -5,22 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>FSMCalc</groupId>
-    <artifactId>StateMachineCalculcator</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>math-calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>finite-state-machine</module>
-        <module>math-calculator</module>
-        <module>gui</module>
-    </modules>
 
     <dependencies>
-        <dependency>
-            <groupId>FSMCalc</groupId>
-            <artifactId>math-calculator</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
         <dependency>
             <groupId>FSMCalc</groupId>
             <artifactId>finite-state-machine</artifactId>
@@ -28,10 +16,18 @@
         </dependency>
 
         <dependency>
-            <groupId>FSMCalc</groupId>
-            <artifactId>gui</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
 
 </project>
